bk_ida/gccida/g2/subst_stack_regs_pat
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1918:6: error: use of undeclared identifier 'v39'
rtx *v39; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1919:4: error: expected ';' after expression
rtx v40; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1919:5: error: use of undeclared identifier 'v40'
rtx v40; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1923:4: error: expected ';' after expression
rtx v44; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1923:5: error: use of undeclared identifier 'v44'
rtx v44; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1924:4: error: expected ';' after expression
rtx v45; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1924:5: error: use of undeclared identifier 'v45'
rtx v45; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1925:6: error: use of undeclared identifier 'v46'
rtx *v46; // rbx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1926:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note v47; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1898:5: note: enum 'reg_note' is hidden by a non-type declaration of 'reg_note' here
rtx reg_note; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1928:6: error: use of undeclared identifier 'v49'
rtx *v49; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1929:4: error: expected ';' after expression
rtx regno_note; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1929:5: error: use of undeclared identifier 'regno_note'; did you mean 'reg_note'?
rtx regno_note; // rbx 
    ^~~~~~~~~~
    reg_note
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1898:5: note: 'reg_note' declared here
rtx reg_note; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1930:4: error: expected ';' after expression
rtx v51; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1930:5: error: use of undeclared identifier 'v51'
rtx v51; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1946:4: error: expected ';' after expression
rtx v67; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1946:5: error: use of undeclared identifier 'v67'
rtx v67; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1955:4: error: expected ';' after expression
rtx v76; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1955:5: error: use of undeclared identifier 'v76'
rtx v76; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/reg-stack.c:1965:4: error: expected ';' after expression
rtx v86; // rbx 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_stack_regs_pat/src/obj/reg-stack.o] Error 1
